This revision includes some new files that missing in the previous commit.  (Oops!)  It also aims toward creating a stable version of javalanglevels that fixes the most egregious bugs in previous versions.  This "stable version" however is only an intermediate point in a major refactoring of javalanglevels that will fully support all language levels (including the interoperation of full java and language levels in mixed compilation.)
This version does not support forward referencing of inner classes.

The following files were modified:

M    src/edu/rice/cs/javalanglevels/TypeChecker.java
M    src/edu/rice/cs/javalanglevels/Data.java
A    src/edu/rice/cs/javalanglevels/BodyBodyFullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/BodyBodyAdvancedVisitor.java
A    src/edu/rice/cs/javalanglevels/InterfaceBodyFullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/InterfaceBodyAdvancedVisitor.java
M    src/edu/rice/cs/javalanglevels/ElementaryVisitor.java
M    src/edu/rice/cs/javalanglevels/BodyData.java
A    src/edu/rice/cs/javalanglevels/ClassBodyFullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/ClassBodyAdvancedVisitor.java
M    src/edu/rice/cs/javalanglevels/IntermediateVisitor.java
M    src/edu/rice/cs/javalanglevels/AdvancedLevelTest.java
M    src/edu/rice/cs/javalanglevels/InstanceData.java
M    src/edu/rice/cs/javalanglevels/Bob.java
M    src/edu/rice/cs/javalanglevels/LanguageLevelConverter.java
M    src/edu/rice/cs/javalanglevels/VoidMethodsNotAllowedClassBodyTypeChecker.java
M    src/edu/rice/cs/javalanglevels/BodyBodyElementaryVisitor.java
A    src/edu/rice/cs/javalanglevels/FullJavaVisitor.java
M    src/edu/rice/cs/javalanglevels/AdvancedVisitor.java
M    src/edu/rice/cs/javalanglevels/ExpressionTypeChecker.java
M    src/edu/rice/cs/javalanglevels/BodyBodyIntermediateVisitor.java
M    src/edu/rice/cs/javalanglevels/InterfaceBodyIntermediateVisitor.java
M    src/edu/rice/cs/javalanglevels/ClassBodyElementaryVisitor.java
M    src/edu/rice/cs/javal